# FreiaThiwiClient

./: CHANGELOG.md  CMakeLists.txt  README.md
include/: ClientConnect.h  FreiaEncryption.h  FreiaUI.h  Validation.h
src/: ClientConnect.cpp  FreiaEncryption.cpp  FreiaUI.cpp  Validation.cpp  main.cpp
